<resources>
    <string name="score_toolbar">Score :</string>
    <string name="possibleErrors_toolbar">Erreurs possibles :</string>
    <string name="validate_button" translatable="false">OK</string>
    <string name="delete_button" translatable="false">(-)</string>
    <string name="button_9" translatable="false">9</string>
    <string name="button_8" translatable="false">8</string>
    <string name="button_6" translatable="false">6</string>
    <string name="button_7" translatable="false">7</string>
    <string name="button_5" translatable="false">5</string>
    <string name="button_4" translatable="false">4</string>
    <string name="button_3" translatable="false">3</string>
    <string name="button_2" translatable="false">2</string>
    <string name="button_1" translatable="false">1</string>
    <string name="button_0" translatable="false">0</string>
    <string name="clear_button">Effacer</string>
    <string name="score_button">Score</string>
    <string name="new_game_button">Nouvelle Partie</string>
    <string name="app_name">Calcul Mental</string>
    <string name="ERREUR_TROP_GRAND">Valeur trop grande</string>
    <string name="user_answer">Réponse</string>
    <string name="previous">Retour</string>
    <string name="top_one">"Top 1 : "</string>
    <string name="top_two">"Top 2 : "</string>
    <string name="top_three">"Top 3 : "</string>
    <string name="score">Score</string>
    <string name="life">Vie</string>
    <string name="zero_score">0</string>
    <string name="three_lives">3</string>
</resources>