<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ScoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="@color/black"
            android:text="@string/top_one"
            android:textSize="24sp"
            android:layout_margin="20dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/top_two"
            android:textSize="24sp"
            android:layout_margin="20dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right
"
            android:textColor="@color/black"
            android:text="@string/top_three"
            android:textSize="24sp"
            android:layout_margin="20dp" />

        <Button
            android:id="@+id/previous_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/previous" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>